# checks

./: .env  .gitignore  README.md  alembic.ini  deps.py  docker-compose.yml  main.py  prestart.sh  pyproject.toml  utils.py
alembic/: env.py
alembic/versions/: d8aedfc53506_added_models_2024-05-04.py
api/: auth.py  checks.py  routers.py
api/user_auth_bearer/: deps.py  jwt_bearer.py
core/: config.py  enums.py  session.py  validation_messages.py
db/: base.py
db_cruds/: base.py  check.py  product.py  queries.py  user.py
docker_files/: backend.dockerfile
initial_data/: products.json
models/: all_models.py  base.py
schemas/: check.py  product.py  token.py  user.py
scripts/: alembic_revision.sh  backend_init_data.py  backend_pre_start.py  rebuild.sh  test.sh  tests-start.sh
security/: auth_connector.py  token_handler.py
static/templates/: invoice.html
tests/: conftest.py  test_auth.py  test_check_list.py  test_checks.py  test_get_check.py
